# protocol-manager

./: .cursorrules  .gitignore  .pre-commit-config.yaml  DATABASE_RELATIONS_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_AGENTS.md  RELATIONS_FIX_SUMMARY.md  RELATIONS_IMPLEMENTATION_SUMMARY.md  __init__.py  add_database_relations.py  config.env.example  database_ids.txt  debug_relations.py  pyproject.toml  quick_test.py  repair_relations.py  requirements.txt  setup.py  setup_notion_databases.py  setup_notion_databases_simple.py  test_implementation.py  test_relations.py  test_relations_working.py  test_scheduling_constraints.py  test_scheduling_fix.py  test_structure.py
agents/: __init__.py  base_agent.py  coordinator.py  goal_agent.py  schedule_agent.py  todo_agent.py
cli/: __init__.py  main.py
examples/: add_page_example.py  basic_usage.py  calendar_time_blocking_system.py  create_column_dashboard.py  create_dashboard_with_fullwidth.py  create_fullwidth_dashboard.py  create_main_dashboard.py  create_tracking_databases.py  find_page_ids.py  fix_database_icons.py
integrations/: __init__.py
memory/: __init__.py
notion_client/: __init__.py  __main__.py  auth.py  cli.py  client.py  exceptions.py  http_client.py
notion_client/endpoints/: __init__.py  base.py  blocks.py  databases.py  pages.py  search.py  users.py
notion_client/models/: __init__.py  base.py  block.py  database.py  page.py  property.py  user.py
notion_client/utils/: __init__.py  helpers.py  validators.py
notion_client_examples/: quick_page_demo.py  set_page_fullwidth.py  simple_database_demo.py
prompts/: __init__.py  goal_prompts.py  schedule_prompts.py  system_prompts.py  todo_prompts.py
tests/: test_basic.py
tools/: __init__.py  base_tool.py  goal_tools.py  schedule_tools.py  todo_tools.py
